--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,5 +5,6 @@
     <a href="http://neilb.org/reviews/">Reviews</a>
     <a href="http://neilb.org/adoption/">Adoption List</a>
     <a href="http://neilb.org/cpan-tip/">CPAN Tip</a>
-    <a href="http://neilb.org/cpan-regular/" class=selected>Regulars</a>
+    <a href="http://neilb.org/cpan-regulars/" class=selected>Regulars</a>
+    <a href="http://neilb.org/neocpanisms/">NeoCPANisms</a>
 </div>
