On all-time lists, highlight people/chains that are still active

--- a/neilb.css
+++ b/neilb.css
@@ -52,6 +52,14 @@ tr.user.safe {
     background-color: #cceecc;
 }
 
+tr.user.active {
+    background-color: #ffff99;
+}
+
+tr.user.active:hover {
+    background-color: #E6E68A;
+}
+
 tr.user.safe:hover {
     background-color: #bbddbb;
 }
